fixed double scroll on dashboard

--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -2,14 +2,13 @@
     display: flex;
     height: 100vh;
     background-color: #f9fafb;
+
       & > .layout__content {
         flex: 1;
-        min-height: calc(100vh - 80px);
-        height: 100%;
         margin-top: 80px;
         margin-left: 250px;
         padding: 41px 55px;
-        overflow-y: auto;
+        // overflow-y: auto;
         transition: .3s;
         // z-index: 1;
         background-color: #fbfbfb;
