--- a/src/components/TopBar/TopBar.scss
+++ b/src/components/TopBar/TopBar.scss
@@ -21,6 +21,7 @@
     gap: 100px;
   }
   &__logo {
+    cursor: pointer;
     margin-left: 30px;
     img {
       height: 30px;
